# triton-control

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  mkdocs.yml  podman-compose.yaml
.github/workflows/: backend-ci.yml  docs-pages.yml  frontend-ci.yml
charts/triton-control/: Chart.yaml  README.md  values.yaml
charts/triton-control/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  postgresql-deployment.yaml  postgresql-pvc.yaml  postgresql-secret.yaml  postgresql-service.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
code-server-extensions/triton-deploy/: README.md  extension.js  package.json
docker/: nginx.conf  proxy_headers.conf  start-triton-admin.sh
docs/: api.md  architecture-backend-components.md  architecture-overview.md  argo-workflows.md  configuration.md  deployment.md  development-workspaces.md  development.md  getting-started.md  index.md  model-config-validation.md  roadmap.md  security.md  troubleshooting.md  user-guide.md  user-management.md
docs/assets/javascripts/: mermaid-init.js
docs/assets/stylesheets/: home-nav.css
openspec/changes/show-cluster-service-url/: design.md  proposal.md  tasks.md
openspec/specs/embedded-app-new-tab/: spec.md
triton-backend/: .env.example  .gitignore  README.md  main.py  openapi.json  pyproject.toml
triton-backend/app/: exceptions.py  main.py
triton-backend/app/api/: __init__.py  auth_api.py  code_server_api.py  dashboard_api.py  deployment_api.py  development_api.py  error_log_api.py  errors.py  instance_api.py  mlflow_api.py  model_api.py  oidc_api.py  perf_analyzer_api.py  s3_api.py  s3_profile_api.py  user_api.py  workflows_api.py
triton-backend/app/core/: __init__.py  access_control.py  auth.py  crypto.py  identity.py  logging.py  security.py  tls.py  token_extractor.py  user_auth.py
triton-backend/app/db/: __init__.py  database.py  entities.py
triton-backend/app/mappers/: __init__.py  dashboard.py  instance.py  oidc.py  perf_analyzer.py  user.py
triton-backend/app/repositories/: __init__.py  code_servers.py  dashboard_alerts.py  developments.py  instances.py  mlflow.py  oidc_config.py  perf_analyzer.py  s3_profiles.py  users.py  workflow_s3_credentials.py
triton-backend/app/schemas/: __init__.py  code_server.py  dashboard.py  deployment.py  development.py  error_log.py  instance.py  mlflow.py  oidc.py  perf_analyzer.py  s3.py  user.py  workflows.py
triton-backend/app/services/: __init__.py  access.py  dashboard.py  error_logs.py  kubernetes_client.py  users.py
triton-backend/app/services/auth/: __init__.py  bootstrap.py  local_auth.py  oidc_preflight.py  oidc_settings.py
triton-backend/app/services/code_server/: __init__.py  kubernetes.py  navigation.py  proxy.py  workspaces.py
triton-backend/app/services/deployment/: __init__.py  deployment.py  kubernetes.py  records.py  triton_deployment.yaml
triton-backend/app/services/development/: __init__.py  kubernetes.py  navigation.py  proxy.py  workspaces.py
triton-backend/app/services/mlflow/: __init__.py  config.py  installer.py  kubernetes.py  mlflow_deployment.yaml  proxy.py
triton-backend/app/services/oidc/: __init__.py  bff.py  config.py  provider.py  tls.py
triton-backend/app/services/perf_analyzer/: __init__.py  installer.py  kubernetes.py  perf_analyzer_deployment.yaml
triton-backend/app/services/storage/: __init__.py  s3.py  s3_client.py  s3_profiles.py
triton-backend/app/services/triton/: __init__.py  client.py  config.py  health.py  instances.py  models.py  repository_snapshot.py
triton-backend/app/services/workflows/: __init__.py  config.py  credentials.py  proxy.py  status.py
triton-backend/postgresql/: README.md  docker-compose.no-tls.yaml  docker-compose.yaml
triton-backend/protobuff/: README.md  download_model_config_per_branch.py  generate_model_config_pb2.py  generate_triton_release_map.py  triton_release_map.py
triton-backend/scripts/: coverage_summary.py  export_openapi.py
triton-backend/tests/: test_api_and_dashboard.py  test_api_utils.py  test_auth.py  test_code_servers.py  test_crypto_mappers.py  test_deployments.py  test_development.py  test_instance_health_refresher.py  test_kubernetes_client.py  test_main.py  test_mlflow.py  test_oidc_bff.py  test_oidc_settings.py  test_perf_analyzers.py  test_s3_profiles.py  test_security.py  test_services_additional.py  test_tls.py  test_triton_service.py  test_triton_service_edges.py  test_user_api.py  test_user_auth.py  test_workflows.py
triton-backend/tls/: README.md
triton-frontend/: .gitignore  .prettierignore  README.md  angular.json  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  tsconfig.json
triton-frontend/e2e/: mock-triton-server.mjs  playwright.config.ts
triton-frontend/scripts/: generate-api.mjs  generate-api.sh
triton-frontend/src/: index.html  main.server.ts  main.ts  silent-refresh.html  styles.scss  test.ts
triton-frontend/test-results/: .last-run.json
triton-frontend/tls/: READEME.md
(+176 files in other folders)
